reverting header fix for overflow

--- a/app/stylesheets/registration/registration.sass
+++ b/app/stylesheets/registration/registration.sass
@@ -101,8 +101,8 @@ body
     margin: 0px
     padding: 0px
 
-#header 
-  overflow-x: scroll
+// #header 
+//   overflow-x: scroll
 
 #header #user_sign_in div.top-bar
   width: auto
